--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
-Flask
-gunicorn
-Flask-Login
-Flask-SQLAlchemy
-psycopg2-binary
-cloudinary
-Flask-Migrate
+# requirements.txt
+Flask==2.3.3
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.0.5
+Flask-Migrate==4.0.5
+psycopg2-binary==2.9.7
+cloudinary==1.34.0
+gunicorn==21.2.0
+
+# render.yaml (optional but recommended)
+services:
+  - type: web
+    name: your-app-name
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.4
+      - key: DATABASE_URL
+        fromDatabase:
+          name: your-postgres-db-name
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: CLOUDINARY_CLOUD_NAME
+        value: your-cloud-name
+      - key: CLOUDINARY_API_KEY
+        value: your-api-key
+      - key: CLOUDINARY_API_SECRET
+        value: your-api-secret
+
+databases:
+  - name: your-postgres-db-name
+    databaseName: your_db_name
+    user: your_db_user
+
+# Procfile (alternative to render.yaml)
+web: gunicorn app:app
+
+# runtime.txt (specify Python version)
+python-3.11.4
