--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.5
-psycopg2-binary==2.9.9
-cloudinary==1.34.0
-gunicorn==21.2.0
+Flask
+Flask-Login
+Flask-SQLAlchemy
+Flask-Migrate
+psycopg2-binary
+cloudinary
+gunicorn
