--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask
-Flask-Login
-Flask-SQLAlchemy
-Flask-Migrate
-psycopg2-binary
-cloudinary
-gunicorn
+Flask==2.0.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-Migrate==3.1.0
+Werkzeug==2.0.1
+psycopg2-binary==2.9.1
+python-dotenv==0.19.0
+gunicorn==20.1.0
+cloudinary==1.27.0
