--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.0.1
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.5.1
-Flask-Migrate==3.1.0
-Werkzeug==2.0.1
-psycopg2-binary==2.9.1
-python-dotenv==0.19.0
-gunicorn==20.1.0
-cloudinary==1.27.0
+Flask
+Flask-Login
+Flask-SQLAlchemy
+Flask-Migrate
+Werkzeug
+psycopg2-binary
+python-dotenv
+gunicorn
+cloudinary
